--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "personal-finance-tracker",
   "version": "1.0.0",
-  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "keywords": [],
   "author": "",
