--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
+    "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.3"
   }
 }
