--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^2.2.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
